--- a/projetoPos/backend/pom.xml
+++ b/projetoPos/backend/pom.xml
@@ -45,6 +45,12 @@
       <version>2.8.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>3.12.7</version>
+    </dependency>
+
   </dependencies>
 
   <build>
